Bug fix: image overlay overflowing

--- a/src/stylesheets/css/master.css
+++ b/src/stylesheets/css/master.css
@@ -411,13 +411,8 @@ main {
     .image-gallery {
       padding: 0; } }
   .image-gallery .image-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     height: auto;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    position: relative;
     width: 100%; }
     @media (min-width: 649px) {
       .image-gallery .image-container {
@@ -425,37 +420,48 @@ main {
     @media (min-width: 1200px) {
       .image-gallery .image-container {
         width: 33.3333%; } }
+    .image-gallery .image-container:hover .background {
+      opacity: 1; }
+      .image-gallery .image-container:hover .background span {
+        opacity: 1; }
+    .image-gallery .image-container .background {
+      background-color: rgba(211, 47, 47, 0.5);
+      opacity: 0;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      -webkit-transition: all 0.5s;
+      transition: all 0.5s;
+      width: 100%;
+      z-index: 999; }
+      .image-gallery .image-container .background span {
+        color: #fff;
+        font-family: 'Open sans', sans-serif;
+        font-size: 24px;
+        font-weight: 700;
+        left: 50%;
+        opacity: 0;
+        position: absolute;
+        text-shadow: 1px 1px 2px #333;
+        text-transform: uppercase;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        -webkit-transition: 0.3s ease-in-out;
+        transition: 0.3s ease-in-out; }
   .image-gallery figure {
-    height: auto;
+    height: 100%;
     margin: 0;
     position: relative;
     max-width: 650px;
-    width: 100%;
-    background: #d32f2f; }
-    .image-gallery figure:hover > img {
-      opacity: 0.5; }
-    .image-gallery figure:hover > span {
-      opacity: 1; }
+    width: 100%; }
     .image-gallery figure img {
       height: 100%;
       width: 100%;
       opacity: 1;
       -webkit-transition: 0.3s ease-in-out;
       transition: 0.3s ease-in-out; }
-  .image-gallery span {
-    color: #fff;
-    font-family: 'Open sans', sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    left: 50%;
-    opacity: 0;
-    position: absolute;
-    text-transform: uppercase;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    -webkit-transition: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out; }
 
 footer {
   color: #333;
